--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ There have been a number of other important contributors:
 2012 Greg Burlet: Bug fixes, MusicXML to MEI converter, Boost Python superhero
      Peter Henderson: Travis-CI integration, Windows compatibility
 2015 Ian Karp
+2017 Anna Plaksin: C# library
 
 Raffaele Viglianti: Helper methods in the Python Bindings
 Laurent Pugin: Advice and consulting
