--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ There have been a number of other important contributors:
 2015 Ian Karp
 2017 Anna Plaksin: C# library
 2019 Thomas Weber: ManuScript improvements
+2022 Klaus Rettinghaus: Tools updates
 
 Raffaele Viglianti: Helper methods in the Python Bindings
 Laurent Pugin: Advice and consulting
